@@ -36,7 +36,6 @@ class FeedController < ApplicationController
     
     def comment_feed_for_site
       @comments = site.comments.find(:all, :limit => 15, :include => :article)
-      cached_references      << @section
       self.cached_references += @comments
       self.cached_references += @comments.collect(&:article_referenced_cache_key)
     end
