@@ -9,7 +9,7 @@ xm.entry 'xml:base' => home_url do
     xm.category "term" => section.name unless section.home?
   end
   xm.link "rel" => "alternate", "type" => "text/html",
-    "href" => "http://#{request.host_with_port}#{request.relative_url_root}#{site.permalink_for(article)}"
+    "href" => "http://#{request.host_with_port}#{request.relative_url_root}#{section_url_for article}"
   xm.title "Comment on '#{strip_tags(article.title)}' by #{comment.author}"
   xm << %{<content type="html">#{sanitize_feed_content comment.body_html, true}</content>}
 end
